--- a/src/client/entries/global.css
+++ b/src/client/entries/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Jost:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Jost:wght@500&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -10,8 +10,8 @@
     color: #2d2d2d;
     margin: 0;
     padding: 0;
-    /* background-color: #fafafa; */
-    background-color: #fff;
+    background-color: #fafafa;
+    /* background-color: #fff; */
   }
 }
 
