--- a/src/client/entries/global.css
+++ b/src/client/entries/global.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Jost:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -46,6 +47,6 @@
 }
 
 .logo {
-  font-family: 'Jost', sans-serif;
-  font-size: 32px;
+  font-family: 'EB Garamond', sans-serif;
+  font-weight: 500;
 }
