--- a/src/client/entries/global.css
+++ b/src/client/entries/global.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700');
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Signika:wght@400&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -47,6 +47,6 @@
 }
 
 .logo {
-  font-family: 'EB Garamond', sans-serif;
+  font-family: Signika, sans-serif;
   font-weight: 500;
 }
