--- a/src/client/entries/home/home.css
+++ b/src/client/entries/home/home.css
@@ -1,3 +1,3 @@
-h1, h2, h3, h4, h5 {
-  font-family: 'EB Garamond', system-ui, -apple-system, BlinkMacSystemFont, 'Helvetica Neue', Helvetica, sans-serif;
-}
+/* h1, h2, h3, h4, h5 {
+  font-family: Signika, system-ui, -apple-system, BlinkMacSystemFont, 'Helvetica Neue', Helvetica, sans-serif;
+} */
