--- a/src/client/entries/global.css
+++ b/src/client/entries/global.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700');
-@import url('https://fonts.googleapis.com/css2?family=Signika:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Signika:wght@400;500;600&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -53,4 +53,22 @@
 .logo {
   font-family: Signika, sans-serif;
   font-weight: 500;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: Signika, system-ui, -apple-system, BlinkMacSystemFont, 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+h3,
+h4,
+h5 {
+  font-weight: 500;
+}
+
+h1, h2 {
+  font-weight: 600;
 }
